# artificial-death

./: .env  .gitignore  README.md  _vizdoom.ini  gradcam_analysis.py  gradcam_episode.py  pyproject.toml  requirements.txt  scorecam_analysis.py  scorecam_episode.py
sample-factory/sample_factory/: train.py
sample-factory/sample_factory/algo/learning/: learner.py
sample-factory/sample_factory/algo/utils/: curiosity_interface.py  rnd_module.py  running_mean_std.py
sample-factory/sample_factory/model/: actor_critic.py  encoder.py
sample-factory/sample_factory/utils/: normalize.py
sample-factory/sf_examples/vizdoom/: enjoy_custom_vizdoom_env.py  play_human.py  train_custom_vizdoom_env.py  utils.py
sample-factory/sf_examples/vizdoom/doom/: doom_gym.py
sample-factory/sf_examples/vizdoom/doom/scenarios/: backup_health_gathering_supreme.cfg  health_gathering.cfg  health_gathering.wad  health_gathering_dense.cfg  health_gathering_dense.wad  health_gathering_fixed.cfg  health_gathering_fixed.wad  health_gathering_fixed_acsdmg.cfg  health_gathering_fixed_acsdmg.wad  health_gathering_fixed_respawn.cfg  health_gathering_fixed_respawn.wad  health_gathering_no_life.cfg  health_gathering_no_life.wad  health_gathering_rand_static.cfg  health_gathering_rand_static.wad  health_gathering_supreme.cfg  health_gathering_supreme.wad  health_gathering_supreme3x.cfg  health_gathering_supreme3x.wad  health_gathering_supreme_no_life.cfg  health_gathering_supreme_no_life.wad
sample-factory/sf_examples/vizdoom/experiments/: extrinsic.py
(+8 files in other folders)
